--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 
@@ -43,7 +42,7 @@ section h2 {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     margin-left: 4rem;
     padding: 15% 60% 4% 4%;
 }
@@ -55,7 +54,6 @@ header img {
 
 header a {
     font-size: 1.2rem;
-
 }
 
 a {
@@ -68,9 +66,26 @@ main {
     height: 100vh;
 }
 
+/* button scroll */
+
+.button_scroll {
+    background-color: #dd5347;
+    position: fixed;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    right: 30px;
+    bottom: 30px;
+    box-shadow: 0 10px 0 0 #00000015;
+}
+
 /* button first page */
 
-body main a {
+body main section a {
     background-color: #dd5347;
     color: #ffffff;
     font-family: 'Open Sans', sans-serif;
