--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 62.5%;
 }
 
 body {
@@ -104,7 +105,7 @@ div h3 {
     text-align: center;
     font-size: 2.1rem;
     font-weight: 100;
-    margin: 22% 10% 2% 10%;
+    margin: 20% 10% 2% 10%;
     padding: 0 27% 0 27%;
 }
 
@@ -131,7 +132,7 @@ legend {
 input {
     font-family: 'Open Sans', sans-serif;
     margin: 1rem;
-    padding: 0rem 0 0 0.5rem;
+    padding: 0 0 0 0.5rem;
 }
 
 form input {
