--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 li {
-    padding: 0.9rem;
+    padding: 1.65rem;
 }
 
 li:hover {
@@ -28,7 +28,7 @@ header {
     background-color: #fafafa;
     box-shadow: 0 0 10px #00000031;
     width: 100%;
-    height: 4rem;
+    height: 6rem;
     position: fixed;
     display: flex;
     justify-content: space-between;
@@ -47,18 +47,18 @@ section h2 {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    font-size: 2.5rem;
+    font-size: 4rem;
     margin-left: 4rem;
     padding: 15% 60% 4% 4%;
 }
 
 header img {
-    height: 4rem;
-
+    height: 6rem;
 }
 
 header a {
-    font-size: 1.2rem;
+    font-size: 2rem;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
 a {
@@ -94,8 +94,8 @@ body main section a {
     background-color: #dd5347;
     color: #ffffff;
     font-family: 'Open Sans', sans-serif;
-    margin-left: 7.5%;
-    padding: 2rem;
+    margin-left: 7%;
+    padding: 2.5rem;
 }
 
 /* text top form */
