--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ header img {
     height: 6rem;
 }
 
-header a {
+header li a {
     font-size: 2rem;
     padding: 1rem 1rem 1rem 1rem;
 }
@@ -112,7 +112,7 @@ div h3 {
 div h4 {
     font-family: 'Open Sans', sans-serif;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight: 100;
     padding: 0 37% 0 37%;
 }
