--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: black;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+header {
+    background-color: #fafafa;
+    box-shadow: 0 0 10px #00000031;
+    width: 100%;
+    height: 6rem;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+body {
+    font-size: 1.6rem;
+}
+
+li {
+    padding: 1.65rem;
+}
+
 /* form */
 
 form {
