--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,12 @@ body {
 
 li {
     padding: 1.65rem;
+    transition: 0.5s;
 }
 
 li:hover {
     background-color: #dd5347;
+    transition:0.5s;
 }
 
 header {
