modified:   css/main.css 	modified:   css/style.css

--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ form {
 legend {
     font-family: 'Open Sans', sans-serif;
     font-size: 2.6rem;
-    padding: 0.5rem;
+    padding: .5rem;
 }
 
 input {
@@ -158,4 +158,16 @@ fieldset {
     padding: 0 1% 0 1%;
     border-radius: 8px;
     border-color: rgba(0, 0, 0, 0.103);
+}
+
+#submit{
+    color:white; 
+    background-color: #174ea6;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 25%;
+    /* border-radius: 5px; */
 }
