modified:   css/style.css 	modified:   log.php 	modified:   src/inscription_user.inc.php 	modified:   src/log.inc.php

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ html {
     font-size: 62.5%;
 }
 
+.warning {
+    text-align: center;
+    background-color: red
+}
+
 header {
     background-color: #fafafa;
     box-shadow: 0 0 10px #00000031;
