--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ body {
     font-size: 1.6rem;
 }
 
+main {
+    background: url(../asset/home-hero.jpg) no-repeat center center / cover;
+    width: 100vh 100%;
+    height: 100vh;
+}
+
 li {
     padding: 1.65rem;
     transition: 0.5s;
